--- a/packages/with-expo/android/app/src/main/res/values/strings.xml
+++ b/packages/with-expo/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+  <string name="blob_provider_authority">com.usecapsule.template.expo.blobs</string>
   <string name="app_name">capsuleExpoExample</string>
   <string name="expo_splash_screen_resize_mode" translatable="false">contain</string>
   <string name="expo_splash_screen_status_bar_translucent" translatable="false">false</string>
